Removing some unused modules

--- a/httpd.conf
+++ b/httpd.conf
@@ -1,6 +1,7 @@
 #
 ServerTokens OS
 ServerRoot /var/www
+ServerName localhost
 
 Listen 80
 
@@ -8,8 +9,6 @@ LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
 LoadModule authn_file_module modules/mod_authn_file.so
 LoadModule authn_core_module modules/mod_authn_core.so
 LoadModule authz_host_module modules/mod_authz_host.so
-LoadModule authz_groupfile_module modules/mod_authz_groupfile.so
-LoadModule authz_user_module modules/mod_authz_user.so
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule access_compat_module modules/mod_access_compat.so
 LoadModule auth_basic_module modules/mod_auth_basic.so
@@ -23,13 +22,6 @@ LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule version_module modules/mod_version.so
 LoadModule unixd_module modules/mod_unixd.so
 LoadModule status_module modules/mod_status.so
-LoadModule autoindex_module modules/mod_autoindex.so
-<IfModule !mpm_prefork_module>
-	#LoadModule cgid_module modules/mod_cgid.so
-</IfModule>
-<IfModule mpm_prefork_module>
-	#LoadModule cgi_module modules/mod_cgi.so
-</IfModule>
 LoadModule dir_module modules/mod_dir.so
 LoadModule alias_module modules/mod_alias.so
 LoadModule negotiation_module modules/mod_negotiation.so
