--- a/httpd-logging-before-modsec.conf
+++ b/httpd-logging-before-modsec.conf
@@ -1,6 +1,7 @@
 ErrorLog		/var/log/apache2/error.log
 
-# For more information regarding the extended log format and the timestamp variables, please read:
+# For more information regarding the values in the extended log format
+# and aliases and scripts to extract information please read:
 # https://www.netnea.com/cms/apache-tutorial-5_extending-access-log/
 # https://www.netnea.com/cms/apache-tutorial-7_including-modsecurity-core-rules/
 # The timeout variables are empty for now and will be filled later when CRS is loaded into the CRS container.
