--- a/httpd-logging-before-modsec.conf
+++ b/httpd-logging-before-modsec.conf
@@ -1,4 +1,4 @@
-ErrorLog		/var/log/apache2/error.log
+ErrorLog		${ERRORLOG}
 
 # For more information regarding the values in the extended log format
 # and aliases and scripts to extract information please read:
@@ -15,4 +15,4 @@ LogFormat "%h %{GEOIP_COUNTRY_CODE}e %u [%{%Y-%m-%d %H:%M:%S}t.%{usec_frac}t] \"
 %{ModSecAnomalyScoreInPLs}e %{ModSecAnomalyScoreOutPLs}e \
 %{ModSecAnomalyScoreIn}e %{ModSecAnomalyScoreOut}e" extended
 
-CustomLog		/var/log/apache2/access.log extended
+CustomLog		${ACCESSLOG} extended
