--- a/v2-apache/Dockerfile
+++ b/v2-apache/Dockerfile
@@ -1,5 +1,7 @@
 FROM httpd:2.4 as build
-MAINTAINER Chaim Sanders chaim.sanders@gmail.com
+
+LABEL version="2.9.3"
+LABEL maintainer="Chaim Sanders <chaim.sanders@gmail.com>"
 
 # Install Prereqs
 RUN DEBIAN_FRONTEND=noninteractive \
@@ -38,6 +40,7 @@ RUN mkdir -p /usr/share/TLS
 COPY openssl.conf /usr/share/TLS
 RUN openssl req -x509 -days 365 -new -config /usr/share/TLS/openssl.conf -keyout /usr/share/TLS/server.key -out /usr/share/TLS/server.crt
 
+
 FROM httpd:2.4
 
 ARG SETPROXY=True
@@ -53,62 +56,68 @@ ENV ACCESSLOG=/var/log/apache2/access.log
 RUN DEBIAN_FRONTEND=noninteractive \
     apt-get update -qq && \
     apt-get install -qq -y --no-install-recommends --no-install-suggests \
-      libcurl3-gnutls     \
-      libxml2             \
-      libyajl2            && \
-    apt-get clean && rm -rf /var/lib/apt/lists/* && \
+        libcurl3-gnutls \
+        libxml2 \
+        libyajl2 \
+    && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/* && \
     mkdir -p /etc/modsecurity.d && \
     mkdir -p /var/log/apache2/
 
 COPY --from=build /usr/local/apache2/modules/mod_security2.so                            /usr/local/apache2/modules/mod_security2.so
 COPY --from=build /usr/share/ModSecurity/modsecurity-2.9.3/modsecurity.conf-recommended  /etc/modsecurity.d/modsecurity.conf
 COPY --from=build /usr/share/ModSecurity/modsecurity-2.9.3/unicode.mapping               /etc/modsecurity.d/unicode.mapping
-COPY --from=build /usr/local/lib/libfuzzy.so.2.1.0             		                 /usr/local/lib/libfuzzy.so.2.1.0
-COPY --from=build /usr/local/bin/ssdeep               		           	         /usr/local/bin/ssdeep
+COPY --from=build /usr/local/lib/libfuzzy.so.2.1.0                                       /usr/local/lib/libfuzzy.so.2.1.0
+COPY --from=build /usr/local/bin/ssdeep                                                  /usr/local/bin/ssdeep
 COPY --from=build /usr/share/TLS/server.key                                              /usr/local/apache2/conf/server.key
 COPY --from=build /usr/share/TLS/server.crt                                              /usr/local/apache2/conf/server.crt
 COPY httpd-logging-before-modsec.conf                                                    /usr/local/apache2/conf/extra/httpd-logging-before-modsec.conf
 COPY httpd-logging-after-modsec.conf                                                     /usr/local/apache2/conf/extra/httpd-logging-after-modsec.conf
 
 RUN ln -s libfuzzy.so.2.1.0 /usr/local/lib/libfuzzy.so && \
-	ln -s libfuzzy.so.2.1.0 /usr/local/lib/libfuzzy.so.2 && \
-	ldconfig
-
+    ln -s libfuzzy.so.2.1.0 /usr/local/lib/libfuzzy.so.2 && \
+    ldconfig
 
 RUN sed -i -e 's/#LoadModule unique_id_module/LoadModule unique_id_module/g' /usr/local/apache2/conf/httpd.conf && \
-	sed -i -e 's/ServerTokens Full/ServerTokens Prod/g' /usr/local/apache2/conf/extra/httpd-default.conf && \
-	sed -i -e 's/#CustomLog "logs\/access_log" combined/Include conf\/extra\/httpd-logging-before-modsec.conf/' /usr/local/apache2/conf/httpd.conf && \
-	echo "LoadModule security2_module /usr/local/apache2/modules/mod_security2.so"    >>	/usr/local/apache2/conf/httpd.conf && \
-	echo "Include conf/extra/httpd-default.conf"   									                  >>	/usr/local/apache2/conf/httpd.conf && \
-	echo "<IfModule security2_module>\nInclude /etc/modsecurity.d/include.conf\n</IfModule>" 	  >>	/usr/local/apache2/conf/httpd.conf && \
-  echo "include \"/etc/modsecurity.d/modsecurity.conf\"" > /etc/modsecurity.d/include.conf && \
-	echo "Include conf/extra/httpd-logging-after-modsec.conf"  	                	  >>	/usr/local/apache2/conf/httpd.conf && \
-  echo "ServerName \${SERVERNAME}"   										 	                        >> 	/usr/local/apache2/conf/httpd.conf && \
-  echo "hello world" > /usr/local/apache2/htdocs/index.html
+    sed -i -e 's/ServerTokens Full/ServerTokens Prod/g' /usr/local/apache2/conf/extra/httpd-default.conf && \
+    sed -i -e 's/#CustomLog "logs\/access_log" combined/Include conf\/extra\/httpd-logging-before-modsec.conf/' /usr/local/apache2/conf/httpd.conf && \
+    echo "LoadModule security2_module /usr/local/apache2/modules/mod_security2.so"            >> /usr/local/apache2/conf/httpd.conf && \
+    echo "Include conf/extra/httpd-default.conf"                                              >> /usr/local/apache2/conf/httpd.conf && \
+    echo "<IfModule security2_module>\nInclude /etc/modsecurity.d/include.conf\n</IfModule>"  >> /usr/local/apache2/conf/httpd.conf && \
+    echo "include \"/etc/modsecurity.d/modsecurity.conf\"" > /etc/modsecurity.d/include.conf && \
+    echo "Include conf/extra/httpd-logging-after-modsec.conf"                                 >> /usr/local/apache2/conf/httpd.conf && \
+    echo "ServerName \${SERVERNAME}"                                                          >> /usr/local/apache2/conf/httpd.conf && \
+    echo "hello world" > /usr/local/apache2/htdocs/index.html
 
-RUN if [ "$SETTLS" = "True" ]; then echo "setting TLS"; sed -i \
-        -e 's/^#\(Include .*httpd-ssl.conf\)/\1/' \
-        -e 's/^#\(LoadModule .*mod_ssl.so\)/\1/' \
-        -e 's/^#\(LoadModule .*mod_socache_shmcb.so\)/\1/' \
-        conf/httpd.conf; sed -i \
-        -e 's/^ServerName www\.example\.com:443/ServerName \${SERVERNAME}/' \
-	    -e 's/^CustomLog \/proc\/self\/fd\/1 \\/CustomLog		${ACCESSLOG} extended/' \
-	    -e 's/"%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \\"%r\\" %b"//' \
-	    -e 's/ErrorLog \/proc\/self\/fd\/2/ErrorLog		${ERRORLOG}/' \
-        conf/extra/httpd-ssl.conf; \
-	fi
+RUN if [ "$SETTLS" = "True" ]; then \
+        echo "setting TLS"; \
+        sed -i \
+            -e 's/^#\(Include .*httpd-ssl.conf\)/\1/' \
+            -e 's/^#\(LoadModule .*mod_ssl.so\)/\1/' \
+            -e 's/^#\(LoadModule .*mod_socache_shmcb.so\)/\1/' \
+            conf/httpd.conf; \
+        sed -i \
+            -e 's/^ServerName www\.example\.com:443/ServerName \${SERVERNAME}/' \
+            -e 's/^CustomLog \/proc\/self\/fd\/1 \\/CustomLog		${ACCESSLOG} extended/' \
+            -e 's/"%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \\"%r\\" %b"//' \
+            -e 's/ErrorLog \/proc\/self\/fd\/2/ErrorLog		${ERRORLOG}/' \
+            conf/extra/httpd-ssl.conf; \
+    fi
 
-RUN if [ "$SETPROXY" = "True" ]; then echo "setting Proxy"; sed -i \
-        -e 's/^#\(LoadModule .*mod_proxy.so\)/\1/' \
-		    -e 's/^#\(LoadModule .*mod_proxy_http.so\)/\1/' \
-        conf/httpd.conf; \
-		echo "<IfModule proxy_module>\nInclude conf/extra/httpd-proxy.conf\n</IfModule>" >> /usr/local/apache2/conf/httpd.conf; \
-    if [ "$SETTLS" = "True" ]; then \
-      echo "<ifModule proxy_module>\nSSLProxyEngine on\nProxyPass / \${PROXYLOCATION}\nProxyPassReverse / \${PROXYLOCATION}\n</ifModule>" > /usr/local/apache2/conf/extra/httpd-proxy.conf; \
-    else \
-      echo "<ifModule proxy_module>\nProxyPass / \${PROXYLOCATION}\nProxyPassReverse / \${PROXYLOCATION}\n</ifModule>" > /usr/local/apache2/conf/extra/httpd-proxy.conf; \
-    fi; \
-	fi
+RUN if [ "$SETPROXY" = "True" ]; then \
+        echo "setting Proxy"; \
+        sed -i \
+            -e 's/^#\(LoadModule .*mod_proxy.so\)/\1/' \
+            -e 's/^#\(LoadModule .*mod_proxy_http.so\)/\1/' \
+            conf/httpd.conf; \
+        echo "<IfModule proxy_module>\nInclude conf/extra/httpd-proxy.conf\n</IfModule>" >> /usr/local/apache2/conf/httpd.conf; \
+        if [ "$SETTLS" = "True" ]; then \
+            echo "<ifModule proxy_module>\nSSLProxyEngine on\nProxyPass / \${PROXYLOCATION}\nProxyPassReverse / \${PROXYLOCATION}\n</ifModule>" > /usr/local/apache2/conf/extra/httpd-proxy.conf; \
+        else \
+            echo "<ifModule proxy_module>\nProxyPass / \${PROXYLOCATION}\nProxyPassReverse / \${PROXYLOCATION}\n</ifModule>" > /usr/local/apache2/conf/extra/httpd-proxy.conf; \
+        fi; \
+    fi
 
 EXPOSE 80
 EXPOSE 443
