Use shallow clones instead of wget and untar

--- a/v2-apache/Dockerfile
+++ b/v2-apache/Dockerfile
@@ -5,41 +5,47 @@ LABEL maintainer="Chaim Sanders <chaim.sanders@gmail.com>"
 
 # Install Prereqs
 RUN DEBIAN_FRONTEND=noninteractive \
-    apt-get update -qq && \
-    apt-get install -qq -y --no-install-recommends --no-install-suggests \
-      ca-certificates     \
-      automake            \
-      g++	                \
-      libcurl4-gnutls-dev \
-      libpcre++-dev       \
-      libtool             \
-      libxml2-dev         \
-      libyajl-dev         \
-      lua5.2-dev          \
-      make	              \
-      pkgconf             \
-      wget            &&  \
-    apt-get clean && rm -rf /var/lib/apt/lists/*
+    apt-get update -qq \
+ && apt-get install -qq -y --no-install-recommends --no-install-suggests \
+        automake \
+        ca-certificates \
+        g++ \
+        git \
+        libcurl4-gnutls-dev \
+        libpcre++-dev \
+        libtool \
+        libxml2-dev \
+        libyajl-dev \
+        lua5.2-dev \
+        make \
+        pkgconf \
+        wget
 
 # Download and install SSDeep
-RUN mkdir -p /usr/share/SSDeep && cd /usr/share/SSDeep && \
-    wget --quiet "https://github.com/ssdeep-project/ssdeep/releases/download/release-2.14.1/ssdeep-2.14.1.tar.gz" && \
-    tar -xvzf ssdeep-2.14.1.tar.gz && cd /usr/share/SSDeep/ssdeep-2.14.1/ && \
-    ./configure && \
-    make && make install && make clean
+RUN wget --quiet "https://github.com/ssdeep-project/ssdeep/releases/download/release-2.14.1/ssdeep-2.14.1.tar.gz" \
+ && tar -xvzf ssdeep-2.14.1.tar.gz \
+ && cd ssdeep-2.14.1 \
+ && ./configure \
+ && make \
+ && make install \
+ && make clean
 
 # Download ModSecurity & compile ModSecurity
-RUN mkdir -p /usr/share/ModSecurity && cd /usr/share/ModSecurity && \
-    wget --quiet "https://github.com/SpiderLabs/ModSecurity/releases/download/v2.9.3/modsecurity-2.9.3.tar.gz" && \
-    tar -xvzf modsecurity-2.9.3.tar.gz && cd /usr/share/ModSecurity/modsecurity-2.9.3/ && \
-    ./autogen.sh && ./configure && \
-    make && make install && make clean
+RUN git clone https://github.com/SpiderLabs/ModSecurity --branch v2.9.3 --depth 1 \
+ && cd ModSecurity \
+ && ./autogen.sh \
+ && ./configure \
+ && make \
+ && make install \
+ && make clean
 
 # Generate self-signed certificates (if needed)
 RUN mkdir -p /usr/share/TLS
 COPY openssl.conf /usr/share/TLS
-RUN openssl req -x509 -days 365 -new -config /usr/share/TLS/openssl.conf -keyout /usr/share/TLS/server.key -out /usr/share/TLS/server.crt
-
+RUN openssl req -x509 -days 365 -new \
+        -config /usr/share/TLS/openssl.conf \
+        -keyout /usr/share/TLS/server.key \
+        -out /usr/share/TLS/server.crt
 
 FROM httpd:2.4
 
@@ -52,28 +58,26 @@ ENV SERVERNAME=localhost
 ENV ERRORLOG=/var/log/apache2/error.log
 ENV ACCESSLOG=/var/log/apache2/access.log
 
-
 RUN DEBIAN_FRONTEND=noninteractive \
-    apt-get update -qq && \
-    apt-get install -qq -y --no-install-recommends --no-install-suggests \
+    apt-get update -qq \
+ && apt-get install -qq -y --no-install-recommends --no-install-suggests \
         libcurl3-gnutls \
         libxml2 \
         libyajl2 \
-    && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
-    mkdir -p /etc/modsecurity.d && \
-    mkdir -p /var/log/apache2/
+ && apt-get clean \
+ && rm -rf /var/lib/apt/lists/* \
+ && mkdir -p /etc/modsecurity.d \
+ && mkdir -p /var/log/apache2/
 
-COPY --from=build /usr/local/apache2/modules/mod_security2.so                            /usr/local/apache2/modules/mod_security2.so
-COPY --from=build /usr/share/ModSecurity/modsecurity-2.9.3/modsecurity.conf-recommended  /etc/modsecurity.d/modsecurity.conf
-COPY --from=build /usr/share/ModSecurity/modsecurity-2.9.3/unicode.mapping               /etc/modsecurity.d/unicode.mapping
-COPY --from=build /usr/local/lib/libfuzzy.so.2.1.0                                       /usr/local/lib/libfuzzy.so.2.1.0
-COPY --from=build /usr/local/bin/ssdeep                                                  /usr/local/bin/ssdeep
-COPY --from=build /usr/share/TLS/server.key                                              /usr/local/apache2/conf/server.key
-COPY --from=build /usr/share/TLS/server.crt                                              /usr/local/apache2/conf/server.crt
-COPY httpd-logging-before-modsec.conf                                                    /usr/local/apache2/conf/extra/httpd-logging-before-modsec.conf
-COPY httpd-logging-after-modsec.conf                                                     /usr/local/apache2/conf/extra/httpd-logging-after-modsec.conf
+COPY --from=build /usr/local/apache2/modules/mod_security2.so                  /usr/local/apache2/modules/mod_security2.so
+COPY --from=build /usr/local/apache2/ModSecurity/modsecurity.conf-recommended  /etc/modsecurity.d/modsecurity.conf
+COPY --from=build /usr/local/apache2/ModSecurity/unicode.mapping               /etc/modsecurity.d/unicode.mapping
+COPY --from=build /usr/local/lib/libfuzzy.so.2.1.0                             /usr/local/lib/libfuzzy.so.2.1.0
+COPY --from=build /usr/local/bin/ssdeep                                        /usr/local/bin/ssdeep
+COPY --from=build /usr/share/TLS/server.key                                    /usr/local/apache2/conf/server.key
+COPY --from=build /usr/share/TLS/server.crt                                    /usr/local/apache2/conf/server.crt
+COPY httpd-logging-before-modsec.conf                                          /usr/local/apache2/conf/extra/httpd-logging-before-modsec.conf
+COPY httpd-logging-after-modsec.conf                                           /usr/local/apache2/conf/extra/httpd-logging-after-modsec.conf
 
 RUN ln -s libfuzzy.so.2.1.0 /usr/local/lib/libfuzzy.so && \
     ln -s libfuzzy.so.2.1.0 /usr/local/lib/libfuzzy.so.2 && \
