--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -16,7 +16,7 @@ jobs:
         fetch-depth: 1
 
     - name: Build ${{ matrix.image }}
-      run: docker build ${{ matrix.image }}
+      run: docker build . -f ${{ matrix.image }}/Dockerfile
            --tag owasp/modsecurity:$(./version.sh ${{ matrix.image }} -v)
            --tag owasp/modsecurity:$(./version.sh ${{ matrix.image }} -vv)
            --tag owasp/modsecurity:$(./version.sh ${{ matrix.image }} -vvv)
