Add ENV variables
Modsecurity, Nginx and Apache

--- a/src/etc/modsecurity.d/modsecurity-override.conf
+++ b/src/etc/modsecurity.d/modsecurity-override.conf
@@ -1,31 +1,46 @@
 # Original of the latest recommended version:
 # https://github.com/SpiderLabs/ModSecurity/blob/v3/master/modsecurity.conf-recommended
 
-SecRuleEngine ${MODSEC_RULE_ENGINE}
-SecRequestBodyAccess ${MODSEC_REQ_BODY_ACCESS}
+SecAuditEngine RelevantOnly
+SecAuditLog ${MODSEC_AUDIT_LOG}
+SecAuditLogFormat ${MODSEC_AUDIT_LOG_FORMAT}
+SecAuditLogParts ABIJDEFHZ
+SecAuditLogRelevantStatus "^(?:5|4(?!04))"
+SecAuditLogType ${MODSEC_AUDIT_LOG_TYPE}
+SecAuditLogStorageDir ${MODSEC_AUDIT_STORAGE}
 
-SecRequestBodyLimit ${MODSEC_REQ_BODY_LIMIT}
-SecRequestBodyNoFilesLimit ${MODSEC_REQ_BODY_NOFILES_LIMIT}
-SecRequestBodyLimitAction Reject
+SecArgumentSeparator &
+
+SecCookieFormat 0
+
+SecDataDir ${MODSEC_DATA_DIR}
+
+SecDebugLog ${MODSEC_DEBUG_LOG}
+SecDebugLogLevel ${MODSEC_DEBUG_LOGLEVEL}
+
+SecDefaultAction "phase:1,pass,log,tag:'${MODSEC_TAG}'"
 
 SecPcreMatchLimit ${MODSEC_PCRE_MATCH_LIMIT}
 SecPcreMatchLimitRecursion ${MODSEC_PCRE_MATCH_LIMIT_RECURSION}
 
+SecRequestBodyAccess ${MODSEC_REQ_BODY_ACCESS}
+SecRequestBodyLimit ${MODSEC_REQ_BODY_LIMIT}
+SecRequestBodyLimitAction Reject
+SecRequestBodyNoFilesLimit ${MODSEC_REQ_BODY_NOFILES_LIMIT}
+
 SecResponseBodyAccess ${MODSEC_RESP_BODY_ACCESS}
-SecResponseBodyMimeType text/plain text/html text/xml
 SecResponseBodyLimit ${MODSEC_RESP_BODY_LIMIT}
 SecResponseBodyLimitAction ProcessPartial
+SecResponseBodyMimeType text/plain text/html text/xml
 
-SecTmpDir /tmp/
-SecDataDir /tmp/
+SecRuleEngine ${MODSEC_RULE_ENGINE}
 
-SecAuditEngine RelevantOnly
-SecAuditLogRelevantStatus "^(?:5|4(?!04))"
-SecAuditLogParts ABIJDEFHZ
-SecAuditLogType Serial
-SecAuditLog /var/log/modsec_audit.log
-
-SecArgumentSeparator &
-SecCookieFormat 0
-SecUnicodeMapFile unicode.mapping 20127
 SecStatusEngine On
+
+SecTmpDir ${MODSEC_TMP_DIR}
+SecTmpSaveUploadedFiles on
+
+SecUnicodeMapFile unicode.mapping 20127
+
+SecUploadDir ${MODSEC_UPLOAD_DIR}
+SecUploadFileMode 0644
