--- a/v2-apache/conf/extra/httpd-modsecurity.conf
+++ b/v2-apache/conf/extra/httpd-modsecurity.conf
@@ -1,7 +1,13 @@
-Timeout ${APACHE_TIMEOUT}
+LoadModule security2_module /usr/local/apache2/modules/mod_security2.so
+
+Timeout ${TIMEOUT}
+
 LogLevel ${LOGLEVEL}
 ErrorLog ${ERRORLOG}
-ServerAdmin ${SERVERADMIN}
+CustomLog ${ACCESSLOG} "env=!nologging"
+CustomLog ${PERFLOG}
+CustomLog ${METRICSLOG} "env=!nologging"
+TransferLog /proc/self/fd/1
 
 <IfModule unixd_module>
   User ${USER}
@@ -11,7 +17,5 @@ ServerAdmin ${SERVERADMIN}
 <IfModule reqtimeout_module>
   RequestReadTimeout header=20-40,MinRate=500 body=20,MinRate=500
 </IfModule>
-
-LoadModule security2_module /usr/local/apache2/modules/mod_security2.so
 
 Include /etc/modsecurity.d/setup.conf
