--- a/v2-apache/Dockerfile
+++ b/v2-apache/Dockerfile
@@ -45,28 +45,51 @@ RUN openssl req -x509 -days 365 -new \
 
 FROM httpd:2.4
 
-ARG SETPROXY=True
-ARG SETTLS=True
-ARG TLSPUBLICFILE=./server.crt
-ARG TLSPRIVATEFILE=./server.key
-ENV PROXYLOCATION=localhost:80 \
-    SERVERNAME=localhost \
+ENV ACCESSLOG=/var/log/apache2/access.log \
+    BACKEND=http://localhost:80 \
+    BACKEND_WS=ws://localhost:8080 \
     ERRORLOG=/var/log/apache2/error.log \
-    ACCESSLOG=/var/log/apache2/access.log \
-    APACHE_TIMEOUT=60 \
-    LOGLEVEL=warn \
-    USER=daemon \
     GROUP=daemon \
-    SERVERADMIN=root@localhost \
-    PORT=80 \
-    MODSEC_RULE_ENGINE=on \
+    HTTPD_MAX_REQUEST_WORKERS=250 \
+    LOGLEVEL=warn \
+    METRICS_ALLOW_FROM='127.0.0.0/255.0.0.0 ::1/128' \
+    METRICS_DENY_FROM='All' \
+    METRICSLOG='/dev/null combined' \
+    MODSEC_AUDIT_LOG_FORMAT=JSON \
+    MODSEC_AUDIT_LOG_TYPE=Serial \
+    MODSEC_AUDIT_LOG=/dev/stdout \
+    MODSEC_AUDIT_STORAGE=/var/log/modsecurity/audit/ \
+    MODSEC_DATA_DIR=/tmp/modsecurity/data \
+    MODSEC_DEBUG_LOG=/dev/null \
+    MODSEC_DEBUG_LOGLEVEL=0 \
+    MODSEC_PCRE_MATCH_LIMIT_RECURSION=500000 \
+    MODSEC_PCRE_MATCH_LIMIT=500000 \
     MODSEC_REQ_BODY_ACCESS=on \
     MODSEC_REQ_BODY_LIMIT=13107200 \
     MODSEC_REQ_BODY_NOFILES_LIMIT=131072 \
     MODSEC_RESP_BODY_ACCESS=on \
     MODSEC_RESP_BODY_LIMIT=1048576 \
-    MODSEC_PCRE_MATCH_LIMIT=100000 \
-    MODSEC_PCRE_MATCH_LIMIT_RECURSION=100000
+    MODSEC_RULE_ENGINE=on \
+    MODSEC_TAG=modsecurity \
+    MODSEC_TMP_DIR=/tmp/modsecurity/tmp \
+    MODSEC_UPLOAD_DIR=/tmp/modsecurity/upload \
+    PERFLOG='/dev/stdout perflogjson env=write_perflog' \
+    PORT=80 \
+    PROXY_PRESERVE_HOST=on \
+    PROXY_SSL_CA_CERT_KEY=/usr/local/apache2/conf/server.key \
+    PROXY_SSL_CA_CERT=/usr/local/apache2/conf/server.crt \
+    PROXY_SSL_CHECK_PEER_NAME=on \
+    PROXY_SSL_VERIFY=none \
+    PROXY_SSL=on \
+    PROXY_TIMEOUT=42 \
+    REMOTEIP_INT_PROXY='10.1.0.0/16' \
+    REQ_HEADER_FORWARDED_PROTO='https' \
+    SERVER_ADMIN=root@localhost \
+    SERVER_NAME=localhost \
+    SSL_ENGINE=on \
+    SSL_PORT=443 \
+    TIMEOUT=60 \
+    USER=daemon
 
 RUN DEBIAN_FRONTEND=noninteractive \
     apt-get update -qq \
@@ -87,49 +110,30 @@ COPY --from=build /usr/local/bin/ssdeep                                        /
 COPY --from=build /usr/share/TLS/server.key                                    /usr/local/apache2/conf/server.key
 COPY --from=build /usr/share/TLS/server.crt                                    /usr/local/apache2/conf/server.crt
 COPY src/etc/modsecurity.d/*.conf /etc/modsecurity.d/
-COPY v2-apache/conf/extra/httpd-modsecurity.conf /usr/local/apache2/conf/extra/
+COPY v2-apache/conf/extra/*.conf /usr/local/apache2/conf/extra/
 
 RUN ln -s libfuzzy.so.2.1.0 /usr/local/lib/libfuzzy.so \
  && ln -s libfuzzy.so.2.1.0 /usr/local/lib/libfuzzy.so.2 \
  && ldconfig
-
+      
 RUN sed -i -E 's|(Listen) [0-9]+|\1 ${PORT}|' /usr/local/apache2/conf/httpd.conf \
  && sed -i -E 's|(ServerTokens) Full|\1 Prod|' /usr/local/apache2/conf/extra/httpd-default.conf \
- && sed -i -E 's|#(Include conf/extra/httpd-default.conf)|\1|' /usr/local/apache2/conf/httpd.conf \
- && sed -i -E 's|#(ServerName) www.example.com:80|\1 ${SERVERNAME}|' /usr/local/apache2/conf/httpd.conf \
+ && sed -i -E 's|#(ServerName) www.example.com:80|\1 ${SERVER_NAME}|' /usr/local/apache2/conf/httpd.conf \
  && sed -i -E 's|#(LoadModule unique_id_module)|\1|' /usr/local/apache2/conf/httpd.conf \
+ && sed -i -E 's|#(LoadModule rewrite_module modules/mod_rewrite.so)|\1|' /usr/local/apache2/conf/httpd.conf \
+ && sed -i -E 's|#(LoadModule proxy_module modules/mod_proxy.so)|\1|' /usr/local/apache2/conf/httpd.conf \
+ && sed -i -E 's|#(LoadModule proxy_http_module modules/mod_proxy_http.so)|\1|' /usr/local/apache2/conf/httpd.conf \
+ && sed -i -E 's|#(LoadModule remoteip_module modules/mod_remoteip.so)|\1|' /usr/local/apache2/conf/httpd.conf \
+ && sed -i -E 's|#(LoadModule socache_shmcb_module modules/mod_socache_shmcb.so)|\1|' /usr/local/apache2/conf/httpd.conf \
+ && sed -i -E 's|#(LoadModule ssl_module modules/mod_ssl.so)|\1|' /usr/local/apache2/conf/httpd.conf \
+ && sed -i -E 's|#(Include conf/extra/httpd-default.conf)|\1|' /usr/local/apache2/conf/httpd.conf \
+ && sed -i -E 's|#(Include conf/extra/httpd-proxy.conf)|\1|' /usr/local/apache2/conf/httpd.conf \
+ && sed -i -E 's|#(Include conf/extra/httpd-ssl.conf)|\1|' /usr/local/apache2/conf/httpd.conf \
+ && sed -i -E 's|#(Include conf/extra/httpd-vhosts.conf)|\1|' /usr/local/apache2/conf/httpd.conf \
+ && echo 'Include conf/extra/httpd-locations.conf' >> /usr/local/apache2/conf/httpd.conf \
  && echo 'Include conf/extra/httpd-modsecurity.conf' >> /usr/local/apache2/conf/httpd.conf
 
-RUN if [ "$SETTLS" = "True" ]; then \
-      echo "setting TLS"; \
-      sed -i \
-        -e 's/^#\(Include .*httpd-ssl.conf\)/\1/' \
-        -e 's/^#\(LoadModule .*mod_ssl.so\)/\1/' \
-        -e 's/^#\(LoadModule .*mod_socache_shmcb.so\)/\1/' \
-        conf/httpd.conf; \
-      sed -i \
-        -e 's/^ServerName www\.example\.com:443/ServerName \${SERVERNAME}/' \
-        -e 's/^CustomLog \/proc\/self\/fd\/1 \\/CustomLog		\${ACCESSLOG} extended/' \
-        -e 's/"%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \\"%r\\" %b"//' \
-        -e 's/ErrorLog \/proc\/self\/fd\/2/ErrorLog		\${ERRORLOG}/' \
-        conf/extra/httpd-ssl.conf; \
-    fi
-
-RUN if [ "$SETPROXY" = "True" ]; then \
-      echo "setting Proxy"; \
-      sed -i \
-        -e 's/^#\(LoadModule .*mod_proxy.so\)/\1/' \
-        -e 's/^#\(LoadModule .*mod_proxy_http.so\)/\1/' \
-        conf/httpd.conf; \
-      echo "<IfModule proxy_module>\nInclude conf/extra/httpd-proxy.conf\n</IfModule>" >> /usr/local/apache2/conf/httpd.conf; \
-      if [ "$SETTLS" = "True" ]; then \
-        echo "<ifModule proxy_module>\nSSLProxyEngine on\nProxyPass / \${PROXYLOCATION}\nProxyPassReverse / \${PROXYLOCATION}\n</ifModule>" > /usr/local/apache2/conf/extra/httpd-proxy.conf; \
-      else \
-        echo "<ifModule proxy_module>\nProxyPass / \${PROXYLOCATION}\nProxyPassReverse / \${PROXYLOCATION}\n</ifModule>" > /usr/local/apache2/conf/extra/httpd-proxy.conf; \
-      fi; \
-    fi
-
-EXPOSE 80
-EXPOSE 443
+RUN chgrp -R 0 /var/log/ /usr/local/apache2/ && \
+    chmod -R g=u /var/log/ /usr/local/apache2/
 
 CMD ["/usr/local/apache2/bin/apachectl", "-D", "FOREGROUND"]
