Add ssl and proxy for nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: v2-apache/Dockerfile
     environment:
-      BACKEND: http://backend/
+      BACKEND: http://backend
       PORT: "8080"
       SSL_PORT: "4443"
     depends_on:
@@ -14,6 +14,19 @@ services:
     ports:
     - "8080:8080"
     - "4443:4443"
+  nginx-waf:
+    build:
+      context: .
+      dockerfile: v3-nginx/Dockerfile
+    environment:
+      BACKEND: http://backend
+      PORT: "8080"
+      SSL_PORT: "4443"
+    depends_on:
+    - backend
+    ports:
+    - "8081:8080"
+    - "4444:4443"
   backend:
     image: docker.io/kennethreitz/httpbin
     ports: 
