--- a/v3-nginx/nginx.conf
+++ b/v3-nginx/nginx.conf
@@ -22,11 +22,12 @@ http {
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log /var/log/nginx/access.log main;
+    access_log ${ACCESSLOG} main;
+    access_log ${METRICSLOG} combined;
 
     sendfile on;
 
-    keepalive_timeout ${NGINX_KEEPALIVE_TIMEOUT};
+    keepalive_timeout ${KEEPALIVE_TIMEOUT};
 
     include /etc/nginx/conf.d/*.conf;
 }
