--- a/v2-apache/conf/extra/httpd-vhosts.conf
+++ b/v2-apache/conf/extra/httpd-vhosts.conf
@@ -20,17 +20,15 @@ RewriteRule .* "${BACKEND_WS}%{REQUEST_URI}" [P]
 ServerName ${SERVER_NAME}
 ServerAdmin ${SERVER_ADMIN}
 
-UseCanonicalName on
+SSLProxyEngine ${PROXY_SSL}
+SSLProxyVerify ${PROXY_SSL_VERIFY}
+SSLProxyCheckPeerName ${PROXY_SSL_CHECK_PEER_NAME}
+SSLProxyCACertificateFile ${PROXY_SSL_CA_CERT} 
 
-<Virtualhost *:${PORT}>
-  SSLProxyEngine ${PROXY_SSL}
-  SSLProxyVerify ${PROXY_SSL_VERIFY}
-  SSLProxyCheckPeerName ${PROXY_SSL_CHECK_PEER_NAME}
-  SSLProxyCACertificateFile ${PROXY_SSL_CA_CERT}   
-</VirtualHost>
+UseCanonicalName on
 
 <VirtualHost *:${SSL_PORT}>
   SSLEngine ${SSL_ENGINE}
-  SSLCertificateFile ${PROXY_SSL_CA_CERT}
-  SSLCertificateKeyFile ${PROXY_SSL_CA_CERT_KEY}    
+  SSLCertificateFile ${PROXY_SSL_CERT}
+  SSLCertificateKeyFile ${PROXY_SSL_CERT_KEY}    
 </VirtualHost>    
