--- a/v3-nginx/conf.d/default.conf
+++ b/v3-nginx/conf.d/default.conf
@@ -1,14 +1,48 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
 server {
+
+    listen ${SSL_PORT} ssl;
     listen ${PORT};
-    server_name ${SERVERNAME};
+
+    resolver ${DNS_SERVER} valid=5s;
+    server_name ${SERVER_NAME};
+    set $upstream ${BACKEND};
+
+    ssl_certificate ${PROXY_SSL_CERT};
+    ssl_certificate_key ${PROXY_SSL_CERT_KEY};
+    ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
+    ssl_prefer_server_ciphers on;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
     location / {
-        root /usr/share/nginx/html;
+
+        client_max_body_size 0;
         index index.html index.htm;
+
+        proxy_buffering off;
+        proxy_connect_timeout ${PROXY_CONNECT_TIMEOUT};
+        proxy_http_version 1.1;
+        proxy_pass $upstream;
+        proxy_pass_header Authorization;
+        proxy_read_timeout 36000s;
+        proxy_redirect off;
+
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $upstream;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+
+        root /usr/share/nginx/html;
     }
 
-    error_page 500 502 503 504 /50x.html;
+    error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root /usr/share/nginx/html;
+        root   /usr/share/nginx/html;
     }
 }
