--- a/v3-nginx/conf.d/default.conf
+++ b/v3-nginx/conf.d/default.conf
@@ -1,3 +1,5 @@
+# Nginx configuration for both HTTP and SSL
+
 map $http_upgrade $connection_upgrade {
     default upgrade;
     '' close;
@@ -22,28 +24,29 @@ server {
     location / {
 
         client_max_body_size 0;
-        index index.html index.htm;
 
+        proxy_http_version 1.1;
         proxy_buffering off;
         proxy_connect_timeout ${PROXY_CONNECT_TIMEOUT};
-        proxy_http_version 1.1;
-        proxy_pass $upstream;
-        proxy_pass_header Authorization;
         proxy_read_timeout 36000s;
         proxy_redirect off;
 
-        proxy_set_header Connection $connection_upgrade;
-        proxy_set_header Host $upstream;
+        proxy_pass $upstream;
+        proxy_pass_header Authorization;
+
+        proxy_set_header Host $host;
         proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
 
+        index index.html index.htm;
         root /usr/share/nginx/html;
     }
 
-    error_page   500 502 503 504  /50x.html;
+    error_page 500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /usr/share/nginx/html;
+        root /usr/share/nginx/html;
     }
 }
