--- a/v3-nginx/conf.d/logging.conf
+++ b/v3-nginx/conf.d/logging.conf
@@ -4,3 +4,5 @@ log_format main '$remote_addr - $remote_user [$time_local] "$request" '
 
 access_log ${ACCESSLOG} main;
 access_log ${METRICSLOG} combined;
+
+error_log ${ERRORLOG} ${LOGLEVEL};
