Reorder proxy_set-header directives

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: v2-apache/Dockerfile
     environment:
-      BACKEND: https://httpbin.org
+      BACKEND: http://backend  # https://httpbin.org
       PORT: "8080"
       SSL_PORT: "4443"
     depends_on:
@@ -21,10 +21,10 @@ services:
       context: .
       dockerfile: v3-nginx/Dockerfile
     environment:
-      BACKEND: https://httpbin.org
+      BACKEND: http://backend  # https://httpbin.org
       PORT: "8080"
       SSL_PORT: "4443"
-      DNS_SERVER: "8.8.8.8"
+      # DNS_SERVER: "8.8.8.8"
     depends_on:
     - backend
     ports:
