--- a/v3-nginx/conf.d/default.conf
+++ b/v3-nginx/conf.d/default.conf
@@ -25,21 +25,23 @@ server {
 
         client_max_body_size 0;
 
+        proxy_set_header Host $host;
+        proxy_set_header Proxy "";
+        proxy_set_header Upgrade $connection_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
         proxy_http_version 1.1;
         proxy_buffering off;
         proxy_connect_timeout ${PROXY_CONNECT_TIMEOUT};
         proxy_read_timeout 36000s;
         proxy_redirect off;
 
-        proxy_pass $upstream;
         proxy_pass_header Authorization;
-
-        proxy_set_header Host $host;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_pass $upstream;
 
         index index.html index.htm;
         root /usr/share/nginx/html;
