dos2unix (convert line endings)

--- a/v2-apache/conf/extra/httpd-vhosts.conf
+++ b/v2-apache/conf/extra/httpd-vhosts.conf
@@ -1,3 +1,5 @@
+# Apache VirtualHost configuration for both HTTP and SSL
+
 ProxyErrorOverride on
 ProxyPass / ${BACKEND}/ disablereuse=on
 ProxyPassReverse / ${BACKEND}/
