--- a/v3-nginx/conf.d/default.conf
+++ b/v3-nginx/conf.d/default.conf
@@ -19,10 +19,9 @@ server {
     ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
     ssl_prefer_server_ciphers on;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_verify_client ${PROXY_SSL_VERIFY_CLIENT};
+    ssl_verify_client ${PROXY_SSL_VERIFY};
 
     location / {
-
         client_max_body_size 0;
 
         proxy_set_header Host $host;
@@ -36,7 +35,7 @@ server {
 
         proxy_http_version 1.1;
         proxy_buffering off;
-        proxy_connect_timeout ${PROXY_CONNECT_TIMEOUT};
+        proxy_connect_timeout ${PROXY_TIMEOUT};
         proxy_read_timeout 36000s;
         proxy_redirect off;
 
@@ -45,6 +44,28 @@ server {
 
         index index.html index.htm;
         root /usr/share/nginx/html;
+    }
+
+    location /healthz {
+        access_log off;
+        # proxy_pass ;
+        add_header Content-Type text/plain;
+        return 200 "OK";
+    }
+
+    location /metrics/nginx {
+        access_log off;
+        allow ${METRICS_ALLOW_FROM};
+        deny ${METRICS_DENY_FROM};
+
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Connection "keep-alive";
+        proxy_http_version 1.1;
+        # proxy_pass ;
+        proxy_pass_request_headers on;
+        proxy_store off;
     }
 
     error_page 500 502 503 504  /50x.html;
