--- a/v3-nginx/nginx.conf
+++ b/v3-nginx/nginx.conf
@@ -1,6 +1,5 @@
 load_module modules/ngx_http_modsecurity_module.so;
 
-user ${USER};
 worker_processes 1;
 pid /var/run/nginx.pid;
 
@@ -11,7 +10,7 @@ events {
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
-    keepalive_timeout ${KEEPALIVE_TIMEOUT};
+    keepalive_timeout ${TIMEOUT};
     sendfile on;
 
     include /etc/nginx/conf.d/*.conf;
