--- a/v3-nginx/conf.d/default.conf
+++ b/v3-nginx/conf.d/default.conf
@@ -48,7 +48,6 @@ server {
 
     location /healthz {
         access_log off;
-        # proxy_pass ;
         add_header Content-Type text/plain;
         return 200 "OK";
     }
@@ -57,15 +56,8 @@ server {
         access_log off;
         allow ${METRICS_ALLOW_FROM};
         deny ${METRICS_DENY_FROM};
-
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Connection "keep-alive";
-        proxy_http_version 1.1;
-        # proxy_pass ;
-        proxy_pass_request_headers on;
         proxy_store off;
+        stub_status;
     }
 
     error_page 500 502 503 504  /50x.html;
