--- a/src/etc/modsecurity.d/modsecurity-override.conf
+++ b/src/etc/modsecurity.d/modsecurity-override.conf
@@ -31,7 +31,7 @@ SecRequestBodyNoFilesLimit ${MODSEC_REQ_BODY_NOFILES_LIMIT}
 SecResponseBodyAccess ${MODSEC_RESP_BODY_ACCESS}
 SecResponseBodyLimit ${MODSEC_RESP_BODY_LIMIT}
 SecResponseBodyLimitAction ProcessPartial
-SecResponseBodyMimeType text/plain text/html text/xml
+SecResponseBodyMimeType ${MODSEC_RESP_BODY_MIMETYPE}
 
 SecRuleEngine ${MODSEC_RULE_ENGINE}
 
